src/test/resources/javaslang/parser/Javaslang.grammar
grammar Javaslang

grammar : 'grammar' ID ';'? rule+ EOF

rule : ID ':' rulePart ( '|' rulePart )* ';'?

rulePart
  : negatable
  | Literal
  | Reference
  | quantifier
  | subrule
  | sequence

negatable
  : Any
  | Eof
  | Charset
  | Range
  | negation

Any : '.'

Eof : 'EOF'

Charset : '[' ( CHAR | CHAR '-' CHAR )+ ']'

Literal : '\'' CHAR+ '\''

Range : '\'' CHAR '\'' '-' '\'' CHAR '\''

negation : '!' negatable

Reference : ID

quantifier : rulePart ( '?' | '*' | '+' | '{' INT ',' INT '}' | '{' INT '}' )

subrule : '(' ( ID ':' )? rulePart ( '|' rulePart )* ')'

sequence : rulePart*

CHAR : .
ID   : [a-zA-Z]+
INT  : '0'..'9'+
